--- a/app/src/main/res/layout/fragment_dailyforecast.xml
+++ b/app/src/main/res/layout/fragment_dailyforecast.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.RecyclerView android:padding="8dp"
-    android:id="@+id/recycler_daily_forecast"
-    android:layout_width="0dp"
-    android:layout_height="0dp"
+    android:id="@+id/recyclerDailyForecast"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
