--- a/app/src/main/res/layout/fragment_dailyforecast.xml
+++ b/app/src/main/res/layout/fragment_dailyforecast.xml
@@ -6,6 +6,6 @@
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/edit_city"
+    app:layout_constraintTop_toTopOf="parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android" />
