--- a/app/src/main/res/layout/item_daily_forecast.xml
+++ b/app/src/main/res/layout/item_daily_forecast.xml
@@ -5,98 +5,263 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp">
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="0dp">
+
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            tools:text="Date"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
 
         <ImageView
             android:id="@+id/weatherIcon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <ImageView
-            android:id="@+id/windDirectionIcon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/date"
+            android:layout_marginStart="8dp" />
 
         <TextView
             android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:textSize="24sp"
-            app:layout_constraintLeft_toRightOf="@id/weatherIcon"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Weather" />
+            tools:text="Weather description"
+            tools:textSize="10sp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/date"
+            app:layout_constraintLeft_toRightOf="@+id/weatherIcon"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
 
-        <TextView
-            android:id="@+id/temperatureDay"
+        <ImageView
+            android:id="@+id/windDirectionIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            tools:src="@drawable/ic_weather_wind_direction_east"
+            app:layout_constraintLeft_toRightOf="@+id/windSpeed"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="24" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp" />
 
         <TextView
-            android:id="@+id/temperatureNight"
+            android:id="@+id/windSpeed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="24" />
+            tools:text="Wind"
+            tools:textSize="10sp"
+            app:layout_constraintLeft_toRightOf="@+id/windIcon"
+            app:layout_constraintRight_toLeftOf="@+id/windDirectionIcon"
+            app:layout_constraintBaseline_toBaselineOf="@+id/humidity" />
 
         <TextView
-            android:id="@+id/temperatureEvening"
+            android:id="@+id/clouds"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="24" />
+            tools:text="Clouds"
+            tools:textSize="10sp"
+            app:layout_constraintLeft_toRightOf="@+id/cloudsIcon"
+            app:layout_constraintRight_toLeftOf="@+id/pressureIcon"
+            app:layout_constraintBaseline_toBaselineOf="@+id/humidity" />
+
+        <TextView
+            android:id="@+id/humidity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Humidity"
+            tools:textSize="10sp"
+            app:layout_constraintRight_toLeftOf="@+id/cloudsIcon"
+            app:layout_constraintLeft_toRightOf="@+id/humidityIcon"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/weatherIcon" />
+
+        <TextView
+            android:id="@+id/pressure"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Pressure"
+            tools:textSize="10sp"
+            app:layout_constraintLeft_toRightOf="@+id/pressureIcon"
+            app:layout_constraintRight_toLeftOf="@+id/windIcon"
+            app:layout_constraintBaseline_toBaselineOf="@+id/humidity" />
+
+        <TextView
+            android:id="@+id/text_morning"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/forecast_text_morning"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="@+id/temperatureMorning"
+            app:layout_constraintRight_toRightOf="@+id/temperatureMorning"
+            app:layout_constraintBottom_toBottomOf="@+id/weatherIcon"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp" />
 
         <TextView
             android:id="@+id/temperatureMorning"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
+            tools:text="24"
+            app:layout_constraintRight_toLeftOf="@+id/temperatureDay"
+            app:layout_constraintLeft_toRightOf="@+id/weatherIcon"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/text_morning" />
+
+        <TextView
+            android:id="@+id/text_day"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/forecast_text_day"
+            app:layout_constraintBottom_toBottomOf="@+id/weatherIcon"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="@+id/temperatureDay"
+            app:layout_constraintRight_toRightOf="@+id/temperatureDay"
+            android:layout_marginStart="8dp" />
+
+        <TextView
+            android:id="@+id/temperatureDay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/text_day"
+            app:layout_constraintLeft_toRightOf="@+id/temperatureMorning"
+            app:layout_constraintRight_toLeftOf="@+id/temperatureEvening"
+            tools:text="25" />
+
+        <TextView
+            android:id="@+id/text_evening"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/forecast_text_evening"
+            app:layout_constraintBottom_toBottomOf="@+id/weatherIcon"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintRight_toRightOf="@+id/temperatureEvening"
+            app:layout_constraintLeft_toLeftOf="@+id/temperatureEvening" />
+
+        <TextView
+            android:id="@+id/temperatureEvening"
+            android:layout_width="23dp"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            tools:text="26"
+            app:layout_constraintRight_toLeftOf="@+id/temperatureNight"
+            app:layout_constraintLeft_toRightOf="@+id/temperatureDay"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/text_evening" />
+
+        <TextView
+            android:id="@+id/text_night"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/forecast_text_night"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="@+id/temperatureNight"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="@+id/temperatureNight"
+            app:layout_constraintBottom_toBottomOf="@+id/weatherIcon"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp" />
+
+        <TextView
+            android:id="@+id/temperatureNight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            tools:text="27"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="24" />
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/text_night"
+            app:layout_constraintLeft_toRightOf="@+id/temperatureEvening" />
 
-        <TextView
-            android:id="@+id/humidity"
+        <ImageView
+            android:id="@+id/humidityIcon"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_weather_humidity"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/humidity"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/weatherIcon" />
 
-        <TextView
-            android:id="@+id/pressure"
+        <ImageView
+            android:id="@+id/pressureIcon"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_weather_pressure"
+            app:layout_constraintLeft_toRightOf="@+id/clouds"
+            app:layout_constraintRight_toLeftOf="@+id/pressure"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp" />
 
-        <TextView
-            android:id="@+id/date"
+        <ImageView
+            android:id="@+id/cloudsIcon"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_weather_cloud"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/humidity"
+            app:layout_constraintRight_toLeftOf="@+id/clouds"
+            android:layout_marginBottom="8dp" />
 
         <TextView
             android:id="@+id/temperatureUnits"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            tools:text="Celsius"
+            tools:layout_editor_absoluteX="420dp"
+            app:layout_constraintTop_toTopOf="@+id/guideline"
+            android:layout_marginTop="8dp" />
 
-        <TextView
-            android:id="@+id/windSpeed"
+        <ImageView
+            android:id="@+id/windIcon"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_weather_wind"
+            app:layout_constraintLeft_toRightOf="@+id/pressure"
+            app:layout_constraintRight_toLeftOf="@+id/windSpeed"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp" />
 
-        <TextView
-            android:id="@+id/clouds"
+        <android.support.constraint.Guideline
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:id="@+id/guideline"
+            app:layout_constraintGuide_begin="20dp"
+            android:orientation="horizontal"
+            tools:layout_editor_absoluteY="53dp"
+            tools:layout_editor_absoluteX="8dp" />
 
     </android.support.constraint.ConstraintLayout>
+
 </android.support.v7.widget.CardView>
 
