--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,12 +21,10 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <FrameLayout
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        app:layout_collapseMode="pin"
-        app:layout_scrollFlags="scroll|snap" />
+        <fragment
+            android:id="@+id/fragmentWeather"
+            android:name="ru.andrikeev.android.synoptic.ui.fragment.weather.WeatherFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
 </android.support.design.widget.CoordinatorLayout>
