--- a/app/src/main/res/layout/item_weather.xml
+++ b/app/src/main/res/layout/item_weather.xml
@@ -18,12 +18,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            tools:text="20.07.17 02:30 AM"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="20.07.17 02:30 AM" />
+            android:layout_marginTop="8dp" />
 
         <ImageView
             android:id="@+id/weatherIcon"
@@ -69,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lastUpdate"
             tools:layout_conversion_absoluteHeight="16dp"
