--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#212121</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorPrimaryLight">#616161</color>
-    <color name="colorAccent">#64FFDA</color>
-    <color name="textColorPrimary">#545454</color>
+    <color name="colorAccent">@color/colorYandexYellow</color>
+    <color name="colorViewPagerDots">@android:color/primary_text_dark</color>
+    <color name="tintIcons">@android:color/primary_text_dark</color>
 </resources>
